@@ -4,6 +4,9 @@ Change history
 Release Candidate 1
 ===================
 
+- Fixed MR-101
+  "Seems Wizard Controller can't define Area"
+
 - Fixed MR-128
   "Introduce the notion of conditions to WizardStepPage"
   
